# octomil-python

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile.mcp  LICENSE  Makefile  README.md  SECURITY.md  edgeml.spec  knope.toml  model.onnx  octomil.spec  pyproject.toml  requirements.txt  setup.py  smithery.yaml  sonar-project.properties
.clusterfuzzlite/: Dockerfile  build.sh  fuzz_config_parsing.py
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: architecture-boundaries.yml  auto-release.yml  benchmark-gate.yml  build-binaries.yml  ci.yml  clusterfuzzlite.yml  codeql.yml  contract-conformance.yml  mcp-docker.yml  nightly-floor.yml  notify-server.yml  publish.yml  release-binary.yml  release.yml  sbom.yml  scorecard.yml  timeout-minutes-lint.yml
architecture/: boundary_rules.yaml
benchmarks/: baseline.json  bench_octomil.py  bench_ollama.py  bench_ttfc_comparison.py
deploy/: k8s-mcp.yaml
docs/: migration-from-openai.md  native-cutover-matrix.md  quickstart.md  routing.md
docs/cleanup/: 2026-05-08-bloat-reduction.md
edgeml/: __init__.py  __main__.py  auth.py  batch.py  cache.py  cli.py  cli_hw.py  client.py  compression.py  decomposer.py  device_info.py  discovery.py  early_exit.py  enterprise.py  grammar.py  interactive.py  model_optimizer.py  model_registry.py  ollama.py  routing.py  scanner.py  serve.py  telemetry.py
edgeml/agents/: __init__.py  launcher.py  registry.py
edgeml/demos/: __init__.py  code_assistant.py
edgeml/engines/: cactus_engine.py  executorch_engine.py  llamacpp_engine.py  mlx_engine.py  ort_engine.py  registry.py  samsung_one_engine.py  whisper_engine.py
edgeml/hardware/: __init__.py  _cpu.py  _types.py
edgeml/models/: __init__.py  catalog.py  parser.py  resolver.py
edgeml/python/: README.md  __init__.py  pyproject.toml
edgeml/python/edgeml/: __init__.py  api_client.py  auth.py  client.py  control_plane.py  data_loader.py  deploy.py  edge.py  federated_client.py  federation.py  inference.py  registry.py
edgeml/python/edgeml.egg-info/: PKG-INFO  SOURCES.txt
edgeml/python/edgeml/feature_alignment/: __init__.py  aligner.py
edgeml/sources/: __init__.py  kaggle.py
examples/: deploy_mobilenet.py  routing_example.py
examples/code-assistant/: README.md  demo.py
homebrew/: edgeml.rb  octomil.rb
homebrew-tap/: README.md
homebrew-tap/Formula/: edgeml.rb  octomil.rb
octomil/: __init__.py  __main__.py  anonymous_telemetry.py  auth.py  auth_config.py  batch.py  cache.py  capabilities_client.py  chat.py  chat_client.py  cli.py  cli_helpers.py  cli_hw.py  client.py  compression.py  configure.py  control.py  decomposer.py  device_config.py  device_context.py  device_info.py  discovery.py  early_exit.py  embeddings.py  enterprise.py  errors.py  facade.py  grammar.py  install_id.py  integrations.py  interactive.py  manifest.py  manifest_validator.py  model.py  model_ops.py  model_optimizer.py  model_ref.py  model_registry.py  models_namespace.py  monitoring_config.py  (+16 more)
octomil-legacy/: __init__.py  __main__.py  cli.py  client.py  compression.py  device_info.py  enterprise.py  model_registry.py  qr.py  routing.py  serve.py  telemetry.py
octomil-legacy/engines/: cactus_engine.py  executorch_engine.py  llamacpp_engine.py  mlx_engine.py  mnn_engine.py  ort_engine.py  registry.py  samsung_one_engine.py
octomil-legacy/models/: __init__.py  _types.py  catalog.py  resolver.py
octomil-legacy/python/: README.md  pyproject.toml
octomil/_generated/: .contract-version.json  (+75 more)
octomil/python/: README.md  __init__.py  pyproject.toml
octomil/python/octomil/: __init__.py  api_client.py  auth.py  control_plane.py  data_loader.py  edge.py  federated_client.py  federation.py  filters.py  gradient_cache.py  inference.py  registry.py  resilience.py  secagg.py
octomil/python/octomil/feature_alignment/: __init__.py  aligner.py
octomil/python/octomil/secagg/: __init__.py  client.py  crypto.py  encoding.py  plus_client.py  quantization.py  shamir.py
octomil/runtime-core/: .gitignore  BUILD.md  CMakeLists.txt
octomil/runtime-core/engines/moshi-rs/: Cargo.toml
octomil/runtime-core/engines/moshi-rs/include/: octomil_moshi_rs.h
octomil/runtime-core/engines/moshi-rs/src/: lib.rs
octomil/runtime-core/engines/moshi-rs/tests/: smoke_metal_load.rs
octomil/runtime-core/include/octomil/: runtime.h
octomil/runtime-core/src/: runtime.cpp
octomil/runtime-core/src/adapters/: adapter_base.cpp  adapter_base.h
octomil/runtime-core/src/adapters/moshi_rs/: README.md  moshi_rs_adapter.cpp  moshi_rs_adapter.h
octomil/runtime-core/tests/: test_abi_smoke.cpp  test_engine_capability_honesty.cpp
packaging/: entrypoint.py  octomil.spec
scripts/: build-binary.sh  check-wheel-facade-export.sh  fetch_contracts_dev.py  fetch_runtime_dev.py  install.sh  parity_native_stt.py  parity_native_tts_stream.py  release_run_parity.py  run_benchmark.py  set-release-version.py  sync_embedded_catalog.py  update-homebrew.sh  validate_cache_bench_proof.py
tests/: conftest.py  test_adapter.py  test_agent_command.py  test_agent_session.py  test_api_client.py  test_app_ref_routing.py  test_attempt_runner.py  test_attention_backend.py  test_audio.py  test_audio_diarization_facade.py  test_audio_native_product_routes.py  test_audio_speech_metrics.py  test_audio_speech_stream.py  test_audio_text_normalize.py  test_auth_config.py  test_backend_capabilities.py  test_batch.py  test_bench_cli.py  test_benchmark.py  test_build_config.py  test_cache.py  test_cache_bench_harness.py  test_cache_bench_proof_validator.py  test_cache_h_remediation.py  test_cactus_engine.py  test_catalog_client.py  test_catalog_service.py  test_chat.py  test_chat_client.py  test_chat_cutover_gate.py  test_chat_prepare_adapter.py  test_cli.py  test_cli_run.py  test_client.py  test_client_deploy.py  test_client_telemetry.py  test_client_telemetry_gaps.py  test_cloud_catalog_resolution.py  test_cloud_client_model_override.py  test_cloud_routing.py  (+191 more)
(+401 files in other folders)
