[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "octomil"
version = "4.7.4"
description = "Octomil — serve, deploy, and observe ML models on edge devices"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "Octomil", email = "team@octomil.com"},
]
keywords = ["federated-learning", "machine-learning", "octomil", "on-device", "edge-ai"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "pydantic>=2.0.0",
  "psutil>=5.9.0",
  "httpx>=0.24.0",
  "click>=8.0.0",
  "pandas>=1.5.0",
  "pyarrow>=10.0.0",
  "segno>=1.6",
  "huggingface_hub>=0.20.0",
  "jsonschema>=4.0.0",
]

[project.optional-dependencies]
serve = [
  "fastapi>=0.100.0",
  "uvicorn[standard]>=0.20.0",
]
mlx = [
  "mlx-lm>=0.10.0",
]
llama = [
  "llama-cpp-python>=0.2.0",
]
onnx = [
  "onnxruntime>=1.16.0",
]
whisper = [
  "pywhispercpp>=1.0.0",
]
ml = [
  "torch>=2.0.0",
  "numpy>=1.24.0",
  "pandas>=1.5.0",
]
secagg = [
  "cryptography>=41.0.0",
]
interactive = [
  "prompt_toolkit>=3.0.0",
]
mcp = [
  "mcp[cli]>=1.2.0; python_version>='3.10'",
]
x402 = [
  "eth-account>=0.10.0",
  "httpx>=0.25.0",
]
test = [
  "pytest>=7.0.0",
  "pytest-cov>=4.0.0",
  "pytest-asyncio>=0.21.0",
  "torch>=2.0.0",
  "numpy>=1.24.0",
  "pandas>=1.5.0",
  "keyring>=23.0.0",
  "cryptography>=41.0.0",
  "fastapi>=0.100.0",
  "uvicorn[standard]>=0.20.0",
  "flwr-datasets>=0.3.0",
  "eth-account>=0.10.0",
  "httpx>=0.25.0",
]
dev = [
  "pytest>=7.0.0",
  "pytest-cov>=4.0.0",
  "pytest-asyncio>=0.21.0",
  "torch>=2.0.0",
  "numpy>=1.24.0",
  "pandas>=1.5.0",
  "keyring>=23.0.0",
  "cryptography>=41.0.0",
  "ruff>=0.4.0",
  "fastapi>=0.100.0",
  "uvicorn[standard]>=0.20.0",
  "eth-account>=0.10.0",
]

[project.scripts]
octomil = "octomil.cli:main"

[project.urls]
Homepage = "https://octomil.com"
Documentation = "https://docs.octomil.com/sdks/python"
Repository = "https://github.com/octomil/octomil-python"
Issues = "https://github.com/octomil/octomil-python/issues"

[tool.setuptools.packages.find]
include = ["octomil*"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
strict_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
  "--cov=octomil",
  "--cov-report=term-missing",
  "--cov-report=xml",
  "--cov-report=html",
  "--cov-fail-under=74",
]

[tool.coverage.run]
source = ["octomil"]
omit = [
  "*/tests/*",
  "*/test_*.py",
  "*/__pycache__/*",
  "*/site-packages/*",
  "octomil/utils/fp16_scaling.py",
  "octomil/utils/onnx_sampling.py",
  "octomil/scanner.py",
  "octomil/qr.py",
  "octomil/tool_schemas.py",
  "octomil/sources/resolver.py",
  "octomil/sources/huggingface.py",
  "octomil/_generated/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
