[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "octomil"
version = "4.15.1"
description = "Octomil ŌĆö serve, deploy, and observe ML models on edge devices"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "Octomil", email = "team@octomil.com"},
]
keywords = ["federated-learning", "machine-learning", "octomil", "on-device", "edge-ai"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "pydantic>=2.0.0",
  "psutil>=5.9.0",
  "httpx>=0.24.0",
  "click>=8.0.0",
  "segno>=1.6",
  "huggingface_hub>=0.20.0",
  "jsonschema>=4.0.0",
]
# PR C: pandas / pyarrow / numpy moved off the core dependency list
# because they import heavy native code (and ``sysconfig.get_config_var``
# in pandas) that crashes Ren'Py / sandboxed CPython / some PyInstaller
# builds. Thin clients (``pip install octomil`` for chat / tts /
# embeddings) don't need them. FL / analytics consumers install
# ``octomil[fl]`` or ``octomil[analytics]`` to pull them in.

[project.optional-dependencies]
serve = [
  "fastapi>=0.100.0",
  "uvicorn[standard]>=0.20.0",
]
mlx = [
  "mlx-lm>=0.10.0",
]
llama = [
  "llama-cpp-python>=0.2.0",
]
onnx = [
  "onnxruntime>=1.16.0",
]
whisper = [
  "pywhispercpp>=1.0.0",
]
# PR C: TTS extra. ``pip install octomil[tts]`` plus
# ``octomil prepare kokoro-82m --capability tts`` is the canonical
# happy-path for embedded local TTS (Ren'Py games, kiosk apps, CLI
# tools).
tts = [
  "sherpa-onnx>=1.12",
]
# Optional OpenTelemetry sink for the TTS streaming observability
# collector (``octomil.audio.metrics.OpenTelemetryTtsMetricsSink``).
# The core SDK never imports ``opentelemetry`` ŌĆö installing this extra
# is the opt-in for shipping TTS metrics to OTLP / Prometheus exporters.
otel = [
  "opentelemetry-api>=1.20.0",
  "opentelemetry-sdk>=1.20.0",
]
# Analytics + federated learning surfaces. Lazy-loaded from
# ``octomil/__init__.py`` (see ``_LAZY_SUBMODULES``), so plain
# ``import octomil`` does NOT touch pandas/pyarrow/torch.
analytics = [
  "pandas>=1.5.0",
  "pyarrow>=10.0.0",
  "numpy>=1.24.0",
]
fl = [
  "torch>=2.0.0",
  "numpy>=1.24.0",
  "pandas>=1.5.0",
  "pyarrow>=10.0.0",
]
ml = [
  "torch>=2.0.0",
  "numpy>=1.24.0",
  "pandas>=1.5.0",
]
secagg = [
  "cryptography>=41.0.0",
]
interactive = [
  "prompt_toolkit>=3.0.0",
]
mcp = [
  "mcp[cli]>=1.2.0; python_version>='3.10'",
]
x402 = [
  "eth-account>=0.10.0",
  "httpx>=0.25.0",
]
test = [
  "pytest>=7.0.0",
  "pytest-cov>=4.0.0",
  "pytest-asyncio>=0.21.0",
  # ``pytest-xdist`` parallelizes the suite across worker processes
  # (``pytest -n auto`` in CI). With ~5k tests, it cuts CI wall time
  # 2-4x. Tests must remain isolated across workers ŌĆö use ``tmp_path``
  # / ``monkeypatch`` rather than mutating shared filesystem state
  # (the static-recipe cache tests already do).
  "pytest-xdist>=3.5.0",
  "torch>=2.0.0",
  "numpy>=1.24.0",
  "pandas>=1.5.0",
  "keyring>=23.0.0",
  "cryptography>=41.0.0",
  "fastapi>=0.100.0",
  "uvicorn[standard]>=0.20.0",
  "flwr-datasets>=0.3.0",
  "eth-account>=0.10.0",
  "httpx>=0.25.0",
]
dev = [
  "pytest>=7.0.0",
  "pytest-cov>=4.0.0",
  "pytest-asyncio>=0.21.0",
  "torch>=2.0.0",
  "numpy>=1.24.0",
  "pandas>=1.5.0",
  "keyring>=23.0.0",
  "cryptography>=41.0.0",
  "ruff>=0.4.0",
  "fastapi>=0.100.0",
  "uvicorn[standard]>=0.20.0",
  "eth-account>=0.10.0",
]

[project.scripts]
octomil = "octomil.cli:main"

[project.urls]
Homepage = "https://octomil.com"
Documentation = "https://docs.octomil.com/sdks/python"
Repository = "https://github.com/octomil/octomil-python"
Issues = "https://github.com/octomil/octomil-python/issues"

[tool.setuptools.packages.find]
include = ["octomil*"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
strict_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
  "--cov=octomil",
  "--cov-report=term-missing",
  "--cov-report=xml",
  "--cov-report=html",
  "--cov-fail-under=74",
]

[tool.coverage.run]
source = ["octomil"]
omit = [
  "*/tests/*",
  "*/test_*.py",
  "*/__pycache__/*",
  "*/site-packages/*",
  "octomil/utils/fp16_scaling.py",
  "octomil/utils/onnx_sampling.py",
  "octomil/scanner.py",
  "octomil/qr.py",
  "octomil/tool_schemas.py",
  "octomil/sources/resolver.py",
  "octomil/sources/huggingface.py",
  "octomil/_generated/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
