[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "edgeml-sdk"
version = "0.2.0"
description = "EdgeML Python SDK - Federated Learning Made Simple"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["federated-learning", "machine-learning", "edge-ml", "privacy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.25.0",
    "pandas>=1.5.0",
    "pyarrow>=10.0.0",
]

[project.optional-dependencies]
s3 = ["s3fs>=2023.1.0"]
gcs = ["gcsfs>=2023.1.0"]
azure = ["adlfs>=2023.1.0"]
all = [
    "s3fs>=2023.1.0",
    "gcsfs>=2023.1.0",
    "adlfs>=2023.1.0",
]
torch = ["torch>=2.0.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]
auth = ["keyring>=24.0.0"]

[project.urls]
Homepage = "https://edgeml.io"
Documentation = "https://docs.edgeml.io"
Repository = "https://github.com/edgeml/edgeml-sdk"

[tool.setuptools.packages.find]
where = ["."]
include = ["edgeml*"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
