[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "octomil"
version = "4.17.4"
description = "Octomil Python SDK - Federated Learning Made Simple"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["federated-learning", "machine-learning", "octomil", "privacy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.25.0",
    "pandas>=2.3.3",
    "pyarrow>=21.0.0",
]

[project.optional-dependencies]
s3 = ["s3fs>=2025.10.0"]
gcs = ["gcsfs>=2023.1.0"]
azure = ["adlfs>=2025.8.0"]
all = [
    "s3fs>=2025.10.0",
    "gcsfs>=2023.1.0",
    "adlfs>=2025.8.0",
]
torch = ["torch>=2.8.0"]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=4.0.0",
    # See sibling pyproject.toml for rationale. Keeps the SDK package
    # consistent with the umbrella repo's test deps so a hung test
    # surfaces as a 60s failure, not a 6h Actions ceiling kill.
    "pytest-timeout>=2.3.0",
    "mypy>=1.19.1",
    "ruff>=0.1.0",
    "flwr-datasets>=0.5.0",
    "cryptography>=47.0.0",
]
auth = ["keyring>=25.7.0"]
secagg = ["cryptography>=47.0.0"]

[project.urls]
Homepage = "https://octomil.com"
Documentation = "https://docs.octomil.com"
Repository = "https://github.com/octomil/octomil-python"

[tool.setuptools.packages.find]
where = ["."]
include = ["octomil*"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# ``timeout`` (from ``pytest-timeout``) caps any single test at 60s.
# ``timeout_method = "thread"`` uses a watchdog thread (works under
# pytest-xdist worker subprocesses on every platform). Override
# per-test with ``@pytest.mark.timeout(N)`` when legitimately slow.
timeout = 60
timeout_method = "thread"
addopts = [
    "--cov=octomil",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-report=html",
    "--cov-fail-under=80",
]

[tool.coverage.run]
source = ["octomil"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
